# motis

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
services/agent/: Dockerfile  pyproject.toml
services/agent/motis_agent/: cli.py  cli_backends.py  context.py  server.py  settings.py
services/agent/motis_agent/_upstream_quarantine/: README.md  __init__.py
services/agent/motis_agent/core/: agent_runtime.py  loop.py  memory.py  memory_manager.py  memory_provider.py  operator_registry.py  operator_state.py  operators.py  prompts.py  skills.py
services/agent/motis_agent/core/backtest/: __init__.py  metrics.py  runner.py
services/agent/motis_agent/core/backtest/engines/: __init__.py  base.py  china_a.py  crypto.py  global_equity.py
services/agent/motis_agent/core/memory_providers/: __init__.py  postgres.py
services/agent/motis_agent/operators/: __init__.py  registry.py
services/agent/motis_agent/operators/builtin/commodity_research_team/: operator.py
services/agent/motis_agent/operators/builtin/convertible_bond_team/: operator.py
services/agent/motis_agent/operators/builtin/credit_research_team/: operator.py
services/agent/motis_agent/operators/builtin/crypto_research_lab/: operator.py
services/agent/motis_agent/operators/builtin/crypto_trading_desk/: operator.py
services/agent/motis_agent/operators/builtin/derivatives_strategy_desk/: operator.py
services/agent/motis_agent/operators/builtin/earnings_research_desk/: operator.py
services/agent/motis_agent/operators/builtin/equity_research_team/: operator.py
services/agent/motis_agent/operators/builtin/etf_allocation_desk/: operator.py
services/agent/motis_agent/operators/operators/: __init__.py
services/agent/motis_agent/skills/builtin/: __init__.py
services/agent/motis_agent/skills/finance/: __init__.py
services/agent/motis_agent/swarms/: base.py
services/agent/motis_agent/swarms/presets/: crypto_trading_desk.yaml
services/agent/motis_agent/tools/: _registry.py  _router.py  moa.py  subagent.py  terminal.py  web.py
services/agent/upstream/: HERMES_UPSTREAM_COMMIT  README.md
services/mcp/: MOTIS_DATA_MCP_CONTRACTS.md  Makefile  README.md  motis-mcp  pyproject.toml  setup-mcp.sh
services/mcp/motis_data_mcp/: __init__.py  contracts.py  http_server.py  server.py  settings.py  tools.py
services/mcp/motis_data_mcp/providers/: __init__.py  base.py  ddg.py  http_reader.py  market.py  research.py  router.py  safety.py
services/mcp/motis_data_mcp/providers/search/: __init__.py  core.py  federated.py  http.py
services/mcp/motis_execution_mcp/: __init__.py  http_server.py  paper.py  risk_guard.py  server.py  settings.py  tools.py
services/mcp/motis_execution_mcp/exchanges/: __init__.py
services/mcp/motis_mcp/: server.py
services/mcp/motis_mcp/execution/: risk_guard.py  tools.py
services/mcp/motis_operator_mcp/: __init__.py  http_server.py  server.py  settings.py  tools.py
services/mcp/tests/: test_data_http_server.py  test_data_tool_catalog.py  test_ddg_provider.py  test_execution_http_server.py  test_federated_search_provider.py  test_market_router.py  test_operator_http_server.py  test_research_router.py
services/platform/: pyproject.toml
services/platform/motis_platform/: __init__.py
services/platform/motis_platform/api/: app.py
services/platform/motis_platform/db/: __init__.py  models.py  session.py
services/platform/motis_platform/db/migrations/: env.py  script.py.mako
services/platform/motis_platform/operator_runtime/: worker.py
(+301 files in other folders)
