[project]
name = "motis-agent"
version = "0.1.0"
description = "Motis Master Agent — Hermes-based multi-user agentic coordinator"
requires-python = ">=3.11"
dependencies = [
    "motis-shared",
    "motis-operator-sdk",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "pydantic-settings>=2.2",
    # LangGraph / LangChain (shared with operator_sdk)
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.1",
    # Finance skills (absorbed from Vibe-Trading)
    "ccxt>=4.3",
    "yfinance>=0.2",
    "akshare>=1.14",
    "pandas>=2.2",
    "numpy>=1.26",
    "ta>=0.11",                  # Technical analysis indicators
    "scipy>=1.13",
    # MCP client
    "mcp>=1.0",
]

[project.scripts]
motis-agent = "motis_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
