[project]
name = "motis-mcp"
version = "0.1.0"
description = "Motis MCP Server — trading execution and market data tools"
requires-python = ">=3.11"
dependencies = [
    "motis-shared",
    "mcp>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    # Exchange connectivity
    "ccxt>=4.3",
    "hyperliquid-python-sdk>=0.9",
    "python-binance>=1.0",
    # Security
    "cryptography>=42.0",
]

[project.scripts]
motis-mcp = "motis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
