[project]
name = "motis-mcp"
version = "0.1.0"
description = "Motis MCP workspace — data, execution, and operator MCP services"
requires-python = ">=3.11"
dependencies = [
    "motis-shared",
    "mcp>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "ddgs>=6.0",
    "lxml>=5.2",
    "pandas>=2.2",
    "pydantic-settings>=2.2",
    "yfinance>=0.2",
    "akshare>=1.14",
    "tushare>=1.4",
    # Exchange connectivity
    "ccxt>=4.3",
    "hyperliquid-python-sdk>=0.9",
    "python-binance>=1.0",
    # Security
    "cryptography>=42.0",
]

[project.scripts]
motis-data-mcp = "motis_data_mcp.server:main"
motis-data-mcp-http = "motis_data_mcp.http_server:main"
motis-execution-mcp = "motis_execution_mcp.server:main"
motis-execution-mcp-http = "motis_execution_mcp.http_server:main"
motis-operator-mcp = "motis_operator_mcp.server:main"
motis-operator-mcp-http = "motis_operator_mcp.http_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "motis_data_mcp",
    "motis_execution_mcp",
    "motis_operator_mcp",
]
