[project]
name = "motis-platform"
version = "0.1.0"
description = "Motis Platform — API gateway, operator runtime, arena, marketplace"
requires-python = ">=3.11"
dependencies = [
    "motis-shared",
    "motis-operator-sdk",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",  # JWT
    "stripe>=9.0",
    "boto3>=1.34",                     # S3 / R2
]

[project.scripts]
motis-platform = "motis_platform.api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
